assets/css/style.css
/* ... */
#main-page-dialogue-content {
  bottom: unset !important;
  top: 50% !important;
  transform: translateY(-50%) !important;
}

@media (min-width: 768px) and (max-width: 1023px) {
  #main-page-dialogue {
    transform: translate(0, 0px) !important;
    width: 90% !important;
    top: unset !important;
    border-radius: 14px !important;
  }

  #main-page-dialogue-content {
    transform: unset !important;
  }
}

.planyybody #dark-overlay {
  z-index: 12;
  opacity: 0.8;
  background-color: #31353f;
}

.planyybody #dark-overlay-beneath {
  z-index: 11;
  opacity: 0.8;
  background-color: #31353f;
}

.planyybody .custom-modal {
  z-index: 12;
}

.planyybody .custom-modal {
  text-decoration: none;
}

.sebi {
  max-width: 228px;
}

.sebi .sm {
  display: none;
}

@media screen and (max-width: 575px) {
  .sebi .sm {
    display: block;
  }
}

@media screen and (min-width: 991px) {
  .sebi {
    transform: translateX(-1.5rem);
  }
}

@media screen and (min-width: 769px) {
  .sebi {
    transform: translateX(-1rem);
  }
}

@media screen and (max-width: 991px) and (min-width: 575px) {
  .sebi {
    margin-top: 4rem;
    max-width: unset;
  }
}

@media screen and (max-width: 768px) {
  .sebi .sebi-img {
    width: 48px;
  }
}

#signup-modal {
  padding-top: 1.5rem;
}

@media screen and (max-width: 575px) {
  #signup-modal {
    padding-top: 7rem;
    padding-bottom: 7rem;
  }
}

@media screen and (max-width: 768px) {
  #signup-modal {
    padding-top: 5rem;
  }

  #signup-modal .container {
    max-width: 720px;
  }

  #signup-modal .col-md-5 {
    flex: 0 1 auto;
    max-width: 100%;
    order: 2;
  }

  #signup-modal .col-md-7 {
    flex: 0 1 auto;
    max-width: 500px;
    margin-left: auto;
    margin-right: auto;
    order: 1;
  }

  #signup-modal .btn {
    width: 40%;
  }

  #signup-modal .text-center {
    text-align: center !important;
  }
}

@media screen and (max-width: 575px) {
  #signup-modal {
    padding-top: 2.5rem;
    padding-bottom: 1rem;
  }
}

#signup-modal .btn {
  min-width: 160px;
}

@media screen and (max-width: 920px) {
  #signup-modal .btn {
    min-width: unset;
  }
}

@media screen and (max-width: 768px) {
  #signup-modal .btn {
    min-width: 25%;
  }
}

@media screen and (max-width: 575px) {
  #signup-modal .btn {
    width: 100%;
  }
}

#otp-modal {
  padding-top: 5rem;
  padding-bottom: 6rem;
}

@media screen and (min-width: 769px) {
  #otp-modal .img img {
    transform: translateX(-0.75rem);
  }
}

@media screen and (max-width: 768px) and (min-width: 576px) {
  #otp-modal .verify {
    margin-top: 5rem;
  }
}

@media screen and (max-width: 768px) {
  #otp-modal {
    padding-top: 9rem;
    padding-bottom: 0rem;
  }

  #otp-modal .row > .col-md-7,
  #otp-modal .row > .col-md-5 {
    flex: 0 1 auto;
    max-width: 100%;
  }

  #otp-modal .text-md-left {
    text-align: center !important;
  }

  #otp-modal .mb-4 {
    margin-bottom: 1.5rem !important;
  }

  #otp-modal .img {
    width: 116px;
  }
}

@media screen and (max-width: 820px) and (min-width: 769px) {
  #otp-modal {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media screen and (max-width: 575px) {
  #otp-modal {
    padding-left: 0;
    padding-right: 0;
  }

  #otp-modal h2 {
    font-size: 24px;
  }

  #otp-modal .sub {
    text-align: center;
  }

  #otp-modal .img img {
    width: 110px;
  }

  #otp-modal .img {
    width: 80px;
  }
}

#otp-modal .btns {
  margin-top: 2.5rem;
}

#otp-modal .btns .row > * {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

@media screen and (max-width: 575px) {
  #otp-modal {
    padding-top: 5rem;
    padding-bottom: 3rem;
  }
}

#otp-modal .otp-boxes,
#otp-modal .btns {
  max-width: 300px;
  margin-left: 0;
}

@media screen and (max-width: 768px) {
  #otp-modal .otp-boxes,
  #otp-modal .btns {
    margin-left: auto;
    margin-right: auto;
  }

  #otp-modal .btns {
    margin-top: 5rem !important;
    max-width: 480px;
  }
}

@media screen and (max-width: 575px) {
  #otp-modal .btns {
    margin-top: 1rem !important;
  }
}

@media screen and (max-width: 768px) {
  #otp-modal .sub {
    max-width: 310px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (max-width: 768px) {
  #otp-modal .form {
    margin-left: auto;
    margin-right: auto;
  }
}

#otp-modal .otp-boxes .col-3 {
  padding: 0.5rem;
}

#otp-modal .otp-boxes input {
  font-size: 32px;
  padding: 1.125rem 0.75rem;
  text-align: center;
  font-weight: 500;
  height: 72px;
}

#otp-modal .btns .col-6 {
  padding: 0.5rem;
}

#otp-modal .btn {
  width: 100%;
}

.Generated_Financial_plans .edit {
  /* display: none; */
  position: absolute;
  opacity: 1;
  padding: 1rem;
  right: 0;
  top: 0;
}

@media screen and (min-width: 769px) {
  .Generated_Financial_plans .edit {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  .Generated_Financial_plans .Generated_Financial_plans_data_box_p3 {
    display: none;
  }
}

.modal.modelstyl2.fade .modal-dialog .title {
  margin-left: 1.5rem;
  display: none;
}
/* ... */

